Closed Bug 41151 Opened 25 years ago Closed 25 years ago

HP IMAP: uid search generating wrong command for non-UIDPLUS IMAP server

Categories

(MailNews Core :: Networking: IMAP, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: huang, Assigned: jefft)

Details

(Keywords: imap-interop, Whiteboard: [nsbeta2+] [6/22])

Attachments

(1 file)

uid search generating wrong command for non-UIDPLUS IMAP server (ex: HP IMAP server) Used 05-30-08-M16 commercial build 1) Login to HP IMAP mail account 2) Be sure there is drafts folder and set the preference for coping to the server drafts folder. 3) Tried to compose message and save as drafts. 4) Got an Alert: The current command did not succeed. The mail server responded: Syntax error. Expected results: Should save as drafts successfully.
Keywords: interop
QA Contact: lchiang → huang
Attached file attached IMAP log
Please note thie following line: uid search seen header Message-ID <39359423.5050004@ip117.imc.org> 168[38092b0]: ip117.imc.org:S-Drafts:CreateNewLineFromSocket: 12 BAD syntax error Shouldn't generate "<39359423.5050004@ip117.imc.org>" instead of "39359423.5050004@ip117.imc.org" for non-UIDPLUS IMAP server.
nominating for nsbeta2+... I have a fix ....
Status: NEW → ASSIGNED
Keywords: nsbeta2
Target Milestone: --- → M17
[nsbeta2+]checkin by [6/22]
Whiteboard: [nsbeta2+] [6/22]
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Verified by using 06-06-13-M16 commercial build: 182[33b72b0]: poisonoak.mcom.com:S-Drafts:SendData: 12 uid search seen header Message-ID 393EBD52.70401@poisonoak.mcom.com Marking as verified!!
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: