fixed bug 41151 -- sending illegal uid search command; r=bienvenu,a=scottip